# ripley-terminal

./: .gitignore  FEATURES.md  PENDING_ISSUES.md  README.md  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.renderer.json  vite.config.ts
.ccb/: .claude-session  .gemini-session  .opencode-session
.github/workflows/: build.yml
docs/: fcmp-stressnet-vps.md
resources/: nodes.json
scripts/: bump-text-sizes.js  download-bins.js  get-hash.js  package-linux-bins.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  identity.rs  kvstore.rs  mod.rs  system.rs  tor.rs  vigil.rs  wallet.rs
src-tauri/src/tor/: mod.rs  transport.rs
src-tauri/src/wallet/: base58_monero.rs  keys.rs  mod.rs  scanner.rs  state.rs  storage.rs  transact.rs  tx_proof.rs  types.rs
src/main/: AgentGateway.ts  DaemonManager.ts  NodeManager.ts  SyncWatcher.ts  WalletManager.ts  index.ts  networkPaths.ts  node-manager.ts  tor-manager.ts  types.ts
src/main/__tests__/: networkPaths.test.ts
src/main/handlers/: FileHandler.ts  IdentityHandler.ts  ProxyHandler.ts  VigilHandler.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx  polyfills.ts  tauriBridge.ts  window.d.ts
src/renderer/components/: AuthView.tsx  Card.tsx  ComplianceSelector.tsx  CurrencyInput.tsx  CurrencySelector.tsx  ExchangeView.tsx  GhostView.tsx  HomeView.tsx  SettingsView.tsx  SpreadChart.tsx  SwapView.tsx  VaultView.tsx  VigilView.tsx
src/renderer/components/auth/: AuthForm.tsx  IdentitySwitcher.tsx
src/renderer/components/common/: AddressDisplay.tsx  ExplainerCard.tsx  Spinner.tsx  XMR402Modal.tsx
src/renderer/components/vault/: AddressBook.tsx  AddressList.tsx  AgentTab.tsx  ChurnModal.tsx  CoinControl.tsx  DirectSendTab.tsx  DispatchModal.tsx  DispatchPasswordGate.tsx  FaucetCard.tsx  GhostSendTab.tsx  ReceiveModal.tsx  SplinterModal.tsx  TableHeader.tsx  TransactionLedger.tsx  VaultModals.tsx
src/renderer/components/vigil/: HeartbeatChart.tsx  StrikeWalletPanel.tsx  VigilConfig.tsx  VigilDashboard.tsx
src/renderer/contexts/: TorContext.tsx  VaultContext.tsx  VigilContext.tsx
src/renderer/hooks/: useAddressValidator.ts  useCopyToClipboard.ts  useCurrencies.ts  useFiatValue.ts  usePriceWatcher.ts  useStats.ts  useTheme.ts  useVault.ts  useVigilEngine.ts
src/renderer/hooks/__tests__/: vigilLogic.test.ts
src/renderer/services/: client.ts  rpcClient.ts  strikeWallet.ts  subaddressService.ts  swap.ts  types.ts  walletService.ts
src/renderer/services/stealth/: UpdateListener.ts  XmrStealthEngine.ts  types.ts  utils.ts
src/renderer/utils/: networkMode.ts  strikeKeyCrypto.ts  vigilHotWallet.ts
