[package]
name = "ripley-terminal"
version = "2.0.0"
description = "Tactical Monero Desktop Wallet"
authors = ["KYC.rip"]
edition = "2021"

[lib]
name = "ripley_terminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core framework
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Monero wallet - pure Rust, no C++ FFI
monero-wallet = { git = "https://github.com/monero-oxide/monero-oxide" }
monero-oxide = { git = "https://github.com/monero-oxide/monero-oxide" }
monero-daemon-rpc = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-daemon-rpc" }
monero-address = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-address" }
monero-simple-request-rpc = { git = "https://github.com/monero-oxide/monero-oxide", package = "monero-simple-request-rpc" }
monero-seed = { git = "https://github.com/kayabaNerve/monero-wallet-util" }

# Crypto primitives (matching monero-oxide's versions)
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

# Tor as library (no bundled binary)
# onion-service-client is REQUIRED to dial .onion nodes (all our mainnet.tor
# nodes are .onion); without it arti rejects onion addresses at runtime.
arti-client = { version = "0.40", default-features = false, features = ["tokio", "native-tls", "onion-service-client"] }
tor-rtcompat = { version = "0.40", features = ["tokio"] }

# Time
chrono = "0.4"

# HTTP client (for daemon RPC)
reqwest = { version = "0.12", features = ["json", "socks"] }

# HTTP over arti DataStream (Tor transport). hyper decodes Content-Length AND
# chunked transfer-encoding, so no hand-rolled HTTP parser is needed. Already in
# the tree transitively via reqwest; declared directly for explicit use.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
# TLS over the arti stream for HTTPS GETs (nodes.json, price). Pure-Rust rustls
# (ring provider, enabled by tokio-rustls default features); native cert store.
tokio-rustls = "0.26"
rustls-native-certs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# State persistence
directories = "6"

# Encryption for wallet files
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Hashing (keccak256 for view key derivation)
tiny-keccak = { version = "2", features = ["keccak"] }

# Hex encoding
hex = "0.4"
tokio-socks = "0.5.3"
